feat: scaffolding project

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,3 +53,8 @@ jobs:
         run: |
           # =================  🧹 Lint  =================
           pnpm run lint
+
+      - name: 🧹 Lint
+        run: |
+          # =================  🧹 Lint  =================
+          pnpm run style
