--- a/package.json
+++ b/package.json
@@ -21,51 +21,51 @@
     "node": ">=20",
     "pnpm": ">= 8"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js",
-      "svetle": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
     },
     "./service": {
-      "require": "./dist/service/router.service.cjs",
-      "import": "./dist/service/router.service.js",
-      "types": "./dist/services/index.d.ts"
+      "types": "./dist/service/router.service.d.ts",
+      "import": "./dist/service/router.service.js"
     },
     "./router": {
-      "require": "./dist/components/Router.svelte.cjs",
-      "import": "./dist/components/Router.svelte.js",
-      "svetle": "./dist/components/Router.svelte.js",
-      "types": "./dist/components/Router.svelte.d.ts"
+      "types": "./dist/components/Router.svelte.d.ts",
+      "svetle": "./dist/components/Router.svelte"
     },
     "./link": {
-      "require": "./dist/components/Link.svelte.cjs",
-      "import": "./dist/components/Link.svelte.js",
-      "svetle": "./dist/components/Link.svelte.js",
-      "types": "./dist/components/Link.svelte.d.ts"
+      "types": "./dist/components/Link.svelte.d.ts",
+      "svetle": "./dist/components/Link.svelte"
     }
   },
   "files": [
     "*.md",
     "LICENSE",
-    "dist"
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
   ],
   "scripts": {
     "prepare": "husky",
     "vite:serve": "vite --host",
     "vite:build": "vite build",
     "vite:watch": "vite build --watch",
-    "svelte:check": "svelte-check --tsconfig ./tsconfig.json",
-    "type:check": "tsc -p tsconfig.vite.json",
-    "check": "run-s svelte:check type:check",
-    "build": "run-s check vite:build",
-    "watch": "run-p check vite:watch",
-    "lint": "eslint lib",
-    "lint:fix": "eslint lib --fix",
+    "vite:preview": "vite preview --host",
+    "dev": "run-s vite:serve",
+    "build": "run-s vite:build package",
+    "package": "svelte-kit sync && svelte-package && publint",
+    "prepublishOnly": "npm run package",
+    "check:type": "tsc -p tsconfig.json",
+    "check:type:watch": "tsc -p tsconfig.json --watch",
+    "check:svelte": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "run-s check:type check:svelte",
+    "check:watch": "run-p check:type:watch check:svelte:watch",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "style": "stylelint **/*.{svelte,css,scss,less,html} --go '{\"gitignore\":true}'",
     "style:fix": "pnpm run style --fix",
     "test:unit": "vitest --run --coverage",
@@ -77,7 +77,7 @@
     "access": "public"
   },
   "dependencies": {
-    "svelte": "next",
+    "svelte": "^5.0.0-next.244",
     "vite": "^5.4.3"
   },
   "devDependencies": {
@@ -85,7 +85,10 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@dvcol/eslint-plugin-presets": "^1.3.11",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
-    "@sveltejs/vite-plugin-svelte": "next",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/package": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.5.1",
@@ -104,6 +107,7 @@
     "eslint-plugin-vitest": "^0.4.1",
     "eslint-plugin-yml": "^1.14.0",
     "extract-changelog-release": "^1.0.2",
+    "globals": "^15.0.0",
     "husky": "^9.1.5",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
@@ -112,6 +116,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
+    "publint": "^0.2.0",
     "sass": "^1.77.8",
     "standard-version": "^9.5.0",
     "stylelint": "^16.9.0",
@@ -120,7 +125,6 @@
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
     "vite-plugin-checker": "^0.7.2",
-    "vite-plugin-dts": "^4.2.1",
     "vitest": "^2.0.5"
   },
   "lint-staged": {
