--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "sourceMap": true,
     "strict": true,
     "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "paths": {
+      "~": ["./src/lib"],
+      "~/*": ["./src/lib/*"]
+    }
   }
 }
