feat(build): adds demo build without sveltekit router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,6 @@
     "sourceMap": true,
     "strict": true,
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "paths": {
-      "~": ["./src/lib"],
-      "~/*": ["./src/lib/*"]
-    }
+    "moduleResolution": "NodeNext"
   }
 }
