--- a/package.json
+++ b/package.json
@@ -28,17 +28,25 @@
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
     },
-    "./service": {
-      "types": "./dist/service/router.service.d.ts",
-      "import": "./dist/service/router.service.js"
+    "./models": {
+      "types": "./dist/models/index.d.ts",
+      "import": "./dist/models/index.js"
     },
     "./router": {
-      "types": "./dist/components/Router.svelte.d.ts",
-      "svetle": "./dist/components/Router.svelte"
+      "types": "./dist/router/index.d.ts",
+      "import": "./dist/router/index.js"
     },
-    "./link": {
-      "types": "./dist/components/Link.svelte.d.ts",
-      "svetle": "./dist/components/Link.svelte"
+    "./components": {
+      "types": "./dist/components/index.d.ts",
+      "import": "./dist/components/index.js"
+    },
+    "./components/router": {
+      "types": "./dist/components/RouterView.svelte.d.ts",
+      "svetle": "./dist/components/RouterView.svelte"
+    },
+    "./components/link": {
+      "types": "./dist/components/RouterLink.svelte.d.ts",
+      "svetle": "./dist/components/RouterLink.svelte"
     }
   },
   "files": [
@@ -56,6 +64,7 @@
     "vite:preview": "vite preview --host",
     "dev": "run-s vite:serve",
     "build": "run-s vite:build package",
+    "build:web": "VITE_MODE=WEB run-s vite:build",
     "package": "svelte-kit sync && svelte-package && publint",
     "prepublishOnly": "npm run package",
     "check:type": "tsc -p tsconfig.json",
@@ -77,6 +86,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@dvcol/common-utils": "^1.14.2",
     "svelte": "^5.0.0-next.244",
     "vite": "^5.4.3"
   },
@@ -111,6 +121,7 @@
     "husky": "^9.1.5",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
+    "navigation-api-types": "^0.5.1",
     "npm-run-all2": "^6.2.2",
     "postcss": "^8.4.45",
     "postcss-syntax": "^0.36.2",
