--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -8,7 +8,7 @@ inputs:
     default: 22.x
   pnpm_version:
     description: Node version to use
-    required: true
+    required: false
 
 runs:
   using: composite
