--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,19 @@ jobs:
       - name: 🚧 Build
         uses: ./.github/actions/build
 
+  web:
+    name: ☁️ Build Web
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: ⛙ Checkout branch ${{ github.ref }}
+        uses: actions/checkout@v4
+
+      - name: 🚧 Build
+        uses: ./.github/actions/build
+        with:
+          script: 'build:web'
+
   test:
     name: 🧪 Unit Test
     runs-on: ubuntu-latest
