--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
   },
   "dependencies": {
     "@dvcol/common-utils": "^1.17.0",
-    "svelte": "^5.0.0-next.244",
+    "svelte": "^5.0.0-next.260",
     "vite": "^5.4.3"
   },
   "devDependencies": {
@@ -122,6 +122,8 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/svelte": "^5.2.1",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.5.1",
@@ -142,6 +144,7 @@
     "extract-changelog-release": "^1.0.2",
     "globals": "^15.0.0",
     "husky": "^9.1.5",
+    "jsdom": "^25.0.1",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
     "navigation-api-types": "^0.5.1",
