--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/svelte": "^5.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^22.5.1",
