--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
   },
   "dependencies": {
     "@dvcol/common-utils": "^1.17.2",
-    "svelte": "^5.0.0-next.265",
+    "svelte": "^5.1.0",
     "vite": "^5.4.3"
   },
   "devDependencies": {
@@ -121,7 +121,7 @@
     "@sveltejs/adapter-auto": "^3.2.5",
     "@sveltejs/kit": "^2.7.1",
     "@sveltejs/package": "^2.3.5",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/svelte": "^5.2.3",
     "@testing-library/user-event": "^14.5.2",
