--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/dom-view-transitions": "^1.0.5",
     "@types/node": "^22.5.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
