feat(demo): move to neo-svelte

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "dev": "run-s vite:serve",
     "build": "run-s vite:build package",
     "build:web": "VITE_MODE=WEB run-s vite:build",
-    "serve:web": "VITE_MODE=WEB run-p vite:watch vite:preview",
+    "serve:web": "VITE_MODE=WEB run-s vite:build vite:preview",
     "package": "svelte-kit sync && svelte-package && publint",
     "prepublishOnly": "npm run package",
     "check:type": "tsc -p tsconfig.json",
@@ -117,6 +117,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@dvcol/eslint-plugin-presets": "^1.3.11",
+    "@dvcol/neo-svelte": "^0.1.3",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.9.0",
