--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@dvcol/svelte-simple-router",
   "type": "module",
   "version": "1.7.3",
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.15.0",
   "description": "Simple svelte 5 client side router",
   "homepage": "https://github.com/dvcol/svelte-simple-router",
   "bugs": "https://github.com/dvcol/svelte-simple-router/issues",
@@ -109,22 +109,21 @@
     "svelte": ">=5"
   },
   "dependencies": {
-    "@dvcol/common-utils": "^1.18.2",
-    "@dvcol/svelte-utils": "^1.3.0",
-    "svelte": "^5.1.0",
-    "vite": "^5.4.3"
+    "@dvcol/common-utils": "^1.18.3",
+    "@dvcol/svelte-utils": "^1.5.0",
+    "svelte": "^5.8.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@dvcol/eslint-plugin-presets": "^1.3.11",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
-    "@sveltejs/adapter-auto": "^3.2.5",
-    "@sveltejs/kit": "^2.7.1",
-    "@sveltejs/package": "^2.3.5",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/svelte": "^5.2.3",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/package": "^2.3.7",
+    "@sveltejs/vite-plugin-svelte": "^5.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/svelte": "^5.2.6",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/svelte": "^5.0.4",
@@ -132,8 +131,8 @@
     "@types/node": "^22.5.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitest/coverage-v8": "^2.0.5",
-    "eslint": "^8.57.0",
+    "@vitest/coverage-v8": "^3.0.0-beta.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -145,27 +144,26 @@
     "eslint-plugin-vitest": "^0.4.1",
     "eslint-plugin-yml": "^1.14.0",
     "extract-changelog-release": "^1.0.2",
-    "globals": "^15.0.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
     "navigation-api-types": "^0.5.1",
-    "npm-run-all2": "^6.2.2",
-    "postcss": "^8.4.45",
+    "npm-run-all2": "^6.2.6",
+    "postcss": "^8.4.49",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
-    "publint": "^0.2.0",
-    "sass": "^1.77.8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "publint": "^0.2.12",
+    "sass": "^1.82.0",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.9.0",
-    "svelte-check": "^4.0.5",
+    "stylelint": "^16.11.0",
+    "svelte-check": "^4.1.1",
     "svelte-preprocess": "^6.0.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2",
-    "vite-plugin-checker": "^0.7.2",
-    "vitest": "^2.0.5"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3",
+    "vite-plugin-checker": "^0.8.0",
+    "vitest": "^3.0.0-beta.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue,svelte,json}": [
