--- a/package.json
+++ b/package.json
@@ -109,10 +109,9 @@
     "svelte": ">=5"
   },
   "dependencies": {
-    "@dvcol/common-utils": "^1.21.2",
+    "@dvcol/common-utils": "^1.21.3",
     "@dvcol/svelte-utils": "^1.6.0",
-    "svelte": "^5.18.0",
-    "uuid": "^11.0.5"
+    "svelte": "^5.18.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
