--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "version": "1.11.2",
   "packageManager": "pnpm@9.15.0",
   "description": "Simple svelte 5 client side router",
+  "author": "dvcol",
+  "license": "MIT",
   "homepage": "https://github.com/dvcol/svelte-simple-router",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dvcol/svelte-simple-router.git"
+  },
   "bugs": "https://github.com/dvcol/svelte-simple-router/issues",
   "keywords": [
     "typescript",
@@ -22,18 +28,6 @@
     "history",
     "hash"
   ],
-  "license": "MIT",
-  "author": "dvcol",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dvcol/svelte-simple-router.git"
-  },
-  "engines": {
-    "node": ">=20",
-    "pnpm": ">= 8"
-  },
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -72,13 +66,19 @@
       "svelte": "./dist/components/RouterContext.svelte"
     }
   },
+  "types": "./dist/index.d.ts",
   "files": [
+    "!dist/**/*.spec.*",
+    "!dist/**/*.test.*",
     "*.md",
     "LICENSE",
-    "dist",
-    "!dist/**/*.test.*",
-    "!dist/**/*.spec.*"
+    "dist"
   ],
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">= 8"
+  },
+  "svelte": "./dist/index.js",
   "scripts": {
     "prepare": "husky",
     "vite:serve": "vite --host",
@@ -113,14 +113,14 @@
     "svelte": ">=5"
   },
   "dependencies": {
-    "@dvcol/common-utils": "^1.29.1",
+    "@dvcol/common-utils": "^1.29.2",
     "@dvcol/svelte-utils": "^1.17.1",
     "svelte": "^5.27.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@dvcol/eslint-plugin-presets": "^1.3.11",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@dvcol/eslint-config": "../eslint-config",
     "@dvcol/neo-svelte": "^0.1.12",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
     "@sveltejs/adapter-auto": "^6.0.0",
@@ -128,47 +128,36 @@
     "@sveltejs/package": "^2.3.11",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/svelte": "^5.2.6",
-    "@testing-library/user-event": "^14.5.2",
-    "@tsconfig/node22": "^22.0.0",
+    "@testing-library/svelte": "^5.2.7",
+    "@testing-library/user-event": "^14.6.1",
+    "@tsconfig/node22": "^22.0.1",
     "@tsconfig/svelte": "^5.0.4",
-    "@types/dom-view-transitions": "^1.0.5",
-    "@types/node": "^22.5.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitest/coverage-v8": "^3.0.0-beta.1",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-svelte": "^2.44.1",
-    "eslint-plugin-vitest": "^0.4.1",
-    "eslint-plugin-yml": "^1.14.0",
+    "@types/dom-view-transitions": "^1.0.6",
+    "@types/node": "^22.14.1",
+    "@vitest/coverage-v8": "^3.1.1",
+    "eslint": "^9.24.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-svelte": "^3.5.1",
     "extract-changelog-release": "^1.0.2",
     "husky": "^9.1.7",
-    "jsdom": "^25.0.1",
-    "jsonc-eslint-parser": "^2.4.0",
-    "lint-staged": "^15.2.10",
-    "navigation-api-types": "^0.5.1",
-    "npm-run-all2": "^6.2.6",
-    "postcss": "^8.4.49",
+    "jsdom": "^26.1.0",
+    "lint-staged": "^15.5.1",
+    "navigation-api-types": "^0.6.1",
+    "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.2",
-    "publint": "^0.2.12",
-    "sass": "^1.82.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.3.3",
+    "publint": "^0.3.12",
+    "sass": "^1.86.3",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.11.0",
+    "stylelint": "^16.18.0",
     "svelte-check": "^4.1.6",
     "svelte-preprocess": "^6.0.3",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.3",
-    "vite-plugin-checker": "^0.8.0",
-    "vitest": "^3.0.0-beta.1"
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6",
+    "vite-plugin-checker": "^0.9.1",
+    "vitest": "^3.1.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue,svelte,json}": [
