chore(lint): fix odds and ends
fix(lint): correct typing in router

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dvcol/svelte-simple-router",
   "type": "module",
-  "version": "1.11.2",
+  "version": "2.0.0",
   "packageManager": "pnpm@10.8.1",
   "description": "Simple svelte 5 client side router",
   "author": "dvcol",
@@ -93,12 +93,12 @@
     "prepublishOnly": "npm run package",
     "check:type": "tsc -p tsconfig.json",
     "check:type:watch": "tsc -p tsconfig.json --watch",
-    "check:svelte": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check:svelte": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
+    "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
     "check": "run-s check:type check:svelte",
     "check:watch": "run-p check:type:watch check:svelte:watch",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint src test demo",
+    "lint:fix": "eslint src test demo --fix",
     "style": "stylelint **/*.{svelte,css,scss,less,html} --go '{\"gitignore\":true}'",
     "style:fix": "pnpm run style --fix",
     "test:unit": "vitest --run --coverage",
@@ -120,7 +120,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@dvcol/eslint-config": "../eslint-config",
+    "@dvcol/eslint-config": "^1.1.0",
     "@dvcol/neo-svelte": "^0.1.12",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
     "@sveltejs/adapter-auto": "^6.0.0",
