--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "references": [
+    { "path": "./tsconfig.vite.json" },
+    { "path": "./tsconfig.demo.json" }
+  ]
 }
