chore(lint): fix non project files

--- a/package.json
+++ b/package.json
@@ -86,19 +86,19 @@
     "vite:watch": "vite build --watch",
     "vite:preview": "vite preview --host",
     "dev": "run-s vite:serve",
-    "build": "run-s vite:build package",
+    "build": "run-s check package",
     "build:web": "VITE_MODE=WEB run-s vite:build",
     "serve:web": "VITE_MODE=WEB run-s vite:build vite:preview",
     "package": "svelte-kit sync && svelte-package && publint",
-    "prepublishOnly": "npm run package",
+    "prepublishOnly": "run-s package",
     "check:type": "tsc -p tsconfig.json",
     "check:type:watch": "tsc -p tsconfig.json --watch",
     "check:svelte": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
     "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
     "check": "run-s check:type check:svelte",
     "check:watch": "run-p check:type:watch check:svelte:watch",
-    "lint": "eslint src test demo",
-    "lint:fix": "eslint src test demo --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "style": "stylelint **/*.{svelte,css,scss,less,html} --go '{\"gitignore\":true}'",
     "style:fix": "pnpm run style --fix",
     "test:unit": "vitest --run --coverage",
