--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,8 +34,8 @@ jobs:
           ref: ${{ inputs.commit-hash || 'main' }}
           fetch-depth: 0
 
-      - name: 🚧 Build
-        uses: ./.github/actions/build
+      - name: 🧱 Install
+        uses: ./.github/actions/install
 
       - name: ☁️ Publish
         env:
@@ -45,6 +45,6 @@ jobs:
           # Check status
           git status
           git diff --color -U0 | cat
-          
+
           # Publish
           pnpm publish
