--- a/package.json
+++ b/package.json
@@ -91,10 +91,10 @@
     "serve:web": "VITE_MODE=WEB run-s vite:build vite:preview",
     "package": "svelte-kit sync && svelte-package && publint",
     "prepublishOnly": "run-s package",
-    "check:type": "tsc -p tsconfig.json",
-    "check:type:watch": "tsc -p tsconfig.json --watch",
-    "check:svelte": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
-    "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
+    "check:type": "tsc -p tsconfig.build.json",
+    "check:type:watch": "tsc -p tsconfig.build.json --watch",
+    "check:svelte": "svelte-kit sync && svelte-check --tsconfig tsconfig.build.json",
+    "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.build.json --watch",
     "check": "run-s check:type check:svelte",
     "check:watch": "run-p check:type:watch check:svelte:watch",
     "lint": "eslint .",
