--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.build.json --watch",
     "check": "run-s check:type check:svelte",
     "check:watch": "run-p check:type:watch check:svelte:watch",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint src demo test",
+    "lint:fix": "eslint src demo test --fix",
     "style": "stylelint **/*.{svelte,css,scss,less,html} --go '{\"gitignore\":true}'",
     "style:fix": "pnpm run style --fix",
     "test:unit": "vitest --run --coverage",
