chore(lint): adds missing dep

--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "check:svelte:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.build.json --watch",
     "check": "run-s check:type check:svelte",
     "check:watch": "run-p check:type:watch check:svelte:watch",
-    "lint": "eslint src demo test",
-    "lint:fix": "eslint src demo test --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "style": "stylelint **/*.{svelte,css,scss,less,html} --go '{\"gitignore\":true}'",
     "style:fix": "pnpm run style --fix",
     "test:unit": "vitest --run --coverage",
@@ -123,6 +123,7 @@
     "@dvcol/eslint-config": "^1.2.0",
     "@dvcol/neo-svelte": "^0.1.12",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
+    "@prettier/plugin-xml": "^3.4.1",
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/package": "^2.3.11",
