--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
       "types": "./dist/router/index.d.ts",
       "import": "./dist/router/index.js"
     },
+    "./action": {
+      "types": "./dist/action/index.d.ts",
+      "import": "./dist/action/index.js"
+    },
     "./components": {
       "types": "./dist/components/index.d.ts",
       "import": "./dist/components/index.js"
@@ -115,7 +119,7 @@
   "dependencies": {
     "@dvcol/common-utils": "^1.31.1",
     "@dvcol/svelte-utils": "^1.17.1",
-    "svelte": "^5.27.0"
+    "svelte": "^5.32.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -124,12 +128,12 @@
     "@dvcol/neo-svelte": "^1.1.1",
     "@dvcol/stylelint-plugin-presets": "^2.1.2",
     "@prettier/plugin-xml": "^3.4.1",
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.20.7",
+    "@sveltejs/adapter-auto": "^6.0.1",
+    "@sveltejs/kit": "^2.21.1",
     "@sveltejs/package": "^2.3.11",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/svelte": "^5.2.7",
+    "@testing-library/svelte": "^5.2.8",
     "@testing-library/user-event": "^14.6.1",
     "@tsconfig/node22": "^22.0.1",
     "@tsconfig/svelte": "^5.0.4",
@@ -138,7 +142,7 @@
     "@vitest/coverage-v8": "^3.1.1",
     "eslint": "^9.24.0",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-svelte": "^3.5.1",
+    "eslint-plugin-svelte": "^3.8.2",
     "extract-changelog-release": "^1.0.2",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
@@ -148,12 +152,12 @@
     "postcss": "^8.5.3",
     "postcss-syntax": "^0.36.2",
     "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-svelte": "^3.4.0",
     "publint": "^0.3.12",
     "sass": "^1.86.3",
     "standard-version": "^9.5.0",
     "stylelint": "^16.18.0",
-    "svelte-check": "^4.1.6",
+    "svelte-check": "^4.2.1",
     "svelte-preprocess": "^6.0.3",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
